gcc/testsuite/rust/rustc/ui/error-codes/E0433.rs
fn main () {
    let map = NonExistingMap::new(); // { dg-error ".E0433." "" { target *-*-* } }
}

